fix: sidebar topbar-section alignment

--- a/packages/fuselage/src/components/Sidebar/Sidebar.styles.scss
+++ b/packages/fuselage/src/components/Sidebar/Sidebar.styles.scss
@@ -178,10 +178,6 @@ $sidebar-banner-color-danger: theme(
 
     color: $sidebar-item-color;
 
-    &--section {
-      padding-block-start: lengths.padding(4);
-    }
-
     &--toolbox {
       height: $sidebar-section-height;
     }
